cabal-version:      2.4
name:               submit-http-api
version:            0.1.0.0

author:             spectrum
maintainer:         

extra-source-files: CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/ergolabs/cardano-markets-tracker

common base
  build-depends: base >= 4.9 && < 5

common project-config
  default-language:     Haskell2010

  default-extensions:   OverloadedStrings
                        DeriveAnyClass
                        BangPatterns
                        BinaryLiterals
                        ConstraintKinds
                        DataKinds
                        DefaultSignatures
                        DeriveDataTypeable
                        DeriveFoldable
                        DeriveFunctor
                        DeriveGeneric
                        DeriveTraversable
                        DerivingStrategies
                        UndecidableInstances
                        DoAndIfThenElse
                        EmptyDataDecls
                        ExistentialQuantification
                        LambdaCase
                        FlexibleContexts
                        FlexibleInstances
                        FunctionalDependencies
                        GADTs
                        GeneralizedNewtypeDeriving
                        InstanceSigs
                        KindSignatures
                        LambdaCase
                        MultiParamTypeClasses
                        MultiWayIf
                        NamedFieldPuns
                        PartialTypeSignatures
                        PatternGuards
                        PolyKinds
                        RankNTypes
                        RecordWildCards
                        ScopedTypeVariables
                        StandaloneDeriving
                        TupleSections
                        TypeApplications
                        TypeFamilies
                        TypeSynonymInstances
                        ViewPatterns

  ghc-options:          -O2
                        -threaded
                        -Wall
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wpartial-fields
                        -Wredundant-constraints
                        -Wunused-packages
                        -Widentities
                        -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas

library
    import: base, project-config

    hs-source-dirs: src
    
    exposed-modules: SubmitHttpApi.App
                   , SubmitHttpApi.Models.TxCreationRequest
                   , SubmitHttpApi.Models.TxCreationResponse
                   , SubmitHttpApi.Models.TxCreationErrors
                   , SubmitHttpApi.Models.Common
                   , SubmitHttpApi.Http.Server
                   , SubmitHttpApi.Services.TransactionBuilder
                   , SubmitHttpApi.Modules.TxProcessor
                   , SubmitHttpApi.Config.AppConfig

    build-depends:  hashable
                  , dex-core
                  , cardano-tx
                  , cardano-dex-contracts-offchain
                  , plutus-tx
                  , plutus-ledger
                  , quickblue
                  , exceptions
                  , resourcet
                  , unliftio-core
                  , transformers
                  , hedis
                  , utf8-string
                  , aeson
                  , bytestring
                  , rio
                  , wai
                  , warp
                  , containers
                  , text
                  , submit-api
                  , bytestring
                  , streamly
                  , hw-kafka-client
                  , parsec
                  , dhall
                  , hlog
                  , retry
                  , streaming-kafka
                  , network-api
                  , base16-bytestring
                  , plutus-ledger-api
                  , extra
                  , spectrum-prelude
                  , ledger-sync
                  , io-classes
                  , plutus-script-utils
                  , monad-control
                  , transformers-base
                  , stm
                  , cardano-api
                  , cryptonite
                  , async
                  , contra-tracer
                  , serialise
                  , unix
                  , servant
                  , servant-client
                  , servant-client-core
                  , servant-foreign
                  , servant-server
                  , wallet-api

executable submit-http-api-app
    main-is: Main.hs
    build-depends:  base >= 4.9 && < 5
                  , submit-http-api
                  , rio
    hs-source-dirs:   app
    default-language: Haskell2010