cabal-version:      2.4
name:               submit
version:            0.1.0.0

author:             spectrum
maintainer:         

extra-source-files: CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/ergolabs/cardano-markets-tracker

common base
  build-depends: base >= 4.9 && < 5

common project-config
  default-language:     Haskell2010

  default-extensions:   OverloadedStrings
                        DeriveAnyClass
                        BangPatterns
                        BinaryLiterals
                        ConstraintKinds
                        DataKinds
                        DefaultSignatures
                        DeriveDataTypeable
                        DeriveFoldable
                        DeriveFunctor
                        DeriveGeneric
                        DeriveTraversable
                        DerivingStrategies
                        UndecidableInstances
                        DoAndIfThenElse
                        EmptyDataDecls
                        ExistentialQuantification
                        LambdaCase
                        FlexibleContexts
                        FlexibleInstances
                        FunctionalDependencies
                        GADTs
                        GeneralizedNewtypeDeriving
                        InstanceSigs
                        KindSignatures
                        LambdaCase
                        MultiParamTypeClasses
                        MultiWayIf
                        NamedFieldPuns
                        PartialTypeSignatures
                        PatternGuards
                        PolyKinds
                        RankNTypes
                        RecordWildCards
                        ScopedTypeVariables
                        StandaloneDeriving
                        TupleSections
                        TypeApplications
                        TypeFamilies
                        TypeSynonymInstances
                        ViewPatterns

  ghc-options:          -O2
                        -threaded
                        -Wall
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wpartial-fields
                        -Wredundant-constraints
                        -Wunused-packages
                        -Widentities
                        -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas

library
    import: base, project-config

    hs-source-dirs: src
    
    exposed-modules: Submit.Models.Models
                     Submit.Services.TxMaker
                     Submit.Services.Encryption
                     Submit.Http.HttpServer
                     Submit.Http.Models

    build-depends:  rio
                  , plutus-ledger
                  , cardano-tx
                  , plutus-ledger-api
                  , text == 1.2.5.0
                  , warp == 3.3.20
                  , servant-server == 0.18.3
                  , transformers == 0.5.6.2
                  , quickblue
                  , hlog == 0.1.0.0
                  , rocksdb-haskell
                  , wallet-api
                  , cardano-api
                  , network-api
                  , submit-api
                  , io-classes == 0.2.0.0
                  , algebra-core == 0.1.0.0
                  , exceptions == 0.10.4
                  , aeson == 2.0.2.0
                  