cabal-version:      2.4
name:               tracker
version:            0.1.0.0

author:             spectrum
maintainer:         

extra-source-files: CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/ergolabs/cardano-markets-tracker

common base
  build-depends: base >= 4.9 && < 5

common project-config
  default-language:     Haskell2010

  default-extensions:   AllowAmbiguousTypes
                        OverloadedStrings
                        DeriveAnyClass
                        BangPatterns
                        BinaryLiterals
                        ConstraintKinds
                        DataKinds
                        DefaultSignatures
                        DeriveDataTypeable
                        DeriveFoldable
                        DeriveFunctor
                        DeriveGeneric
                        DeriveTraversable
                        DerivingStrategies
                        DoAndIfThenElse
                        DuplicateRecordFields
                        EmptyDataDecls
                        ExistentialQuantification
                        FlexibleContexts
                        FlexibleInstances
                        FunctionalDependencies
                        GADTs
                        GeneralizedNewtypeDeriving
                        InstanceSigs
                        KindSignatures
                        LambdaCase
                        MultiParamTypeClasses
                        MultiWayIf
                        NamedFieldPuns
                        NoImplicitPrelude
                        PartialTypeSignatures
                        OverloadedStrings
                        PatternGuards
                        PolyKinds
                        RankNTypes
                        RecordWildCards
                        ScopedTypeVariables
                        StandaloneDeriving
                        TupleSections
                        TypeFamilies
                        TypeSynonymInstances
                        TypeApplications
                        ViewPatterns

  ghc-options:          -Wall
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wpartial-fields
                        -Wredundant-constraints
                        -Wunused-packages
                        -Widentities
                        -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas

library
    import: base, project-config

    hs-source-dirs: src
    
    exposed-modules: Tracker.Caches.Cache
                     Tracker.Services.Tracker
                     Tracker.Programs.TrackerProgram
                     Tracker.Models.AppConfig
                     Tracker.Syntax.Option
                     Tracker.Services.ConfigReader
                     Tracker.App
                     Tracker.Syntax.Retry
                     Tracker.Models.ExecutedOrders
                     Tracker.Models.SettledTx
                     Tracker.Models.Interop.Wrappers
                     Tracker.Models.Interop.Class
                     Tracker.Models.Interop.Orders
                     Tracker.Models.Interop.Pool
                     Tracker.Models.Events.PoolEvent
                     Tracker.Models.Events.AnyEOrder
                     Tracker.Models.Events.Class

    build-depends:  hashable
                  , dex-core
                  , cardano-tx
                  , cardano-dex-contracts-offchain
                  , plutus-tx
                  , plutus-ledger
                  , quickblue
                  , exceptions
                  , resourcet
                  , unliftio-core
                  , transformers
                  , hedis
                  , utf8-string
                  , aeson
                  , bytestring
                  , rio
                  , text
                  , bytestring
                  , streamly
                  , hw-kafka-client
                  , dhall
                  , hlog
                  , retry
                  , streaming-kafka
                  , plutus-ledger-api
                  , extra

executable tracker-app
    main-is: Main.hs
    build-depends:  base >= 4.9 && < 5
                  , tracker
                  , rio
    hs-source-dirs:   app
    default-language: Haskell2010